possibly fixed logo spacing

--- a/G_Portfolio/style.css
+++ b/G_Portfolio/style.css
@@ -87,8 +87,8 @@ p {
   /* width: 150px; */
   /* align-content: space-between; */
   background-color: whitesmoke;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 11px;
+  padding-right: 11px;
   border-radius: 0 0px 20px 45px;
   width: 100%;
   justify-content: space-between;
